bk_ida/gccida/g1/c_expand_end_cond
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_expand_end_cond/src/c-common.c:788:7: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
v0 = &if_stack_0[--if_stack_pointer]; 
      ^~~~~~~~~~
      if_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_expand_end_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_expand_end_cond/src/obj/c-common.o] Error 1
